# SquareArch

./: README.md
Simulator/: .gitignore  CMakeLists.txt
Simulator/src/: BinaryPrinting.h  CMakeLists.txt  DefaultGates.h  SquareArchStructs.h  gate.c  gate.h  main.c  maxint.c  node.c  node.h
Simulator/test/: CMakeLists.txt  test_gate.c  test_main.c  test_maxint.c  test_node.c
