cmake_minimum_required(VERSION 3.2)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(SQUARE_ARCH_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(SQUARE_ARCH_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(SQUARE_ARCH_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(SQUARE_ARCH_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src)

include_directories(${SQUARE_ARCH_INSTALL_INCLUDE_DIR})
include_directories(${SQUARE_ARCH_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)
